# neuroevolution

./: .gitignore  Cargo.toml  build.rs
libblis/: libblis.so.3.0.0
src/: main.rs
src/matrix/: mod.rs  test.rs
src/models/: mod.rs
src/models/tic_tac_toe/: mod.rs
src/models/xor/: mod.rs  xor_es.rs  xor_ga.rs
src/nn/activations/: mod.rs  test.rs
src/nn/activations/no_activation/: mod.rs  test.rs
src/nn/activations/param_relu/: mod.rs  test.rs
src/nn/layers/: mod.rs
src/nn/layers/conv/: mod.rs
src/nn/layers/conv2d/: mod.rs  test.rs
src/nn/layers/fully_connected/: mod.rs  test.rs
src/nn/layers/res2d/: mod.rs
